--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,78 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation "androidx.multidex:multidex:2.0.1"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.browser:browser:1.2.0'
+
+    implementation "javax.inject:javax.inject:1"
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+
+    api 'com.google.dagger:dagger:2.27'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.27'
+
+    implementation "com.squareup.okhttp3:okhttp:4.6.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.6.0"
+    implementation "com.squareup.retrofit2:retrofit:2.8.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
+    implementation "com.squareup.retrofit2:converter-simplexml:2.8.1"
+
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
+    implementation 'com.nbsp:materialfilepicker:1.9.1'
+    implementation "io.github.inflationx:calligraphy3:3.1.1"
+    implementation "io.github.inflationx:viewpump:2.0.3"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+    implementation "saschpe.android:customtabs:2.0.3"
+
+    implementation 'io.paperdb:paperdb:2.6'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-2'
+    implementation 'com.squareup.leakcanary:leaksentry:2.0-alpha-3'
+
+    implementation "com.trello.rxlifecycle3:rxlifecycle:3.1.0"
+    implementation "com.trello.rxlifecycle3:rxlifecycle-android:3.1.0"
+    implementation "com.trello.rxlifecycle3:rxlifecycle-kotlin:3.1.0"
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "org.jetbrains.anko:anko-common:0.9"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    testImplementation "junit:junit:4.13"
+    testImplementation 'org.assertj:assertj-core:3.15.0'
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.robolectric:shadows-multidex:4.3.1"
+    testImplementation 'androidx.test:runner:1.2.0'
+    testImplementation 'androidx.test:rules:1.2.0'
+    testImplementation 'androidx.annotation:annotation:1.1.0'
+    testImplementation "androidx.test:rules:1.2.0"
+    testImplementation 'androidx.test:runner:1.2.0'
+    testImplementation "org.threeten:threetenbp:1.4.4"
+    testImplementation "org.mockito:mockito-core:3.1.0"
+
+    testImplementation "org.khronos:opengl-api:gl1.1-android-2.1_r1"
+
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
+}
+
+configurations.all {
+    resolutionStrategy.force 'org.objenesis:objenesis:2.5.1'
+    resolutionStrategy.force "org.ow2.asm:asm:7.0"
 }
