--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
 }
 
 configurations.all {
