--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "io.fabric"
 apply plugin: "kotlin-kapt"
+apply plugin: "com.getkeepsafe.dexcount"
 
 android {
     compileSdkVersion 29
