--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,34 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url "https://maven.fabric.io/public" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
+        classpath "io.fabric.tools:gradle:1.31.2"
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:1.0.2"
+        classpath('com.github.ayvazj.gradle.plugins.androlate:androlate:0.2')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+repositories {
+    jcenter()
+    mavenCentral()
+    maven { url "https://maven.fabric.io/public" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://maven.google.com" }
+    maven { url "http://dl.bintray.com/lukaville/maven" }
+}
+
 
 allprojects {
     repositories {
