--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "io.fabric"
 apply plugin: "kotlin-kapt"
 apply plugin: "com.getkeepsafe.dexcount"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -15,6 +16,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "com.github.premnirmal.ticker.mock.MockTestRunner"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,7 +36,52 @@ kapt {
 }
 
 dependencies {
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-guava:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    def core_version = "1.2.0"
+    implementation "androidx.core:core:$core_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.core:core-role:1.1.0-alpha01"
+    implementation "androidx.core:core-animation:1.0.0-alpha01"
+    androidTestImplementation "androidx.core:core-animation-testing:1.0.0-alpha01"
+
+    def okhttp3_version = "4.6.0"
+    implementation("com.squareup.okhttp3:okhttp:$okhttp3_version")
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+    testImplementation("com.squareup.okhttp3:mockwebserver:$okhttp3_version")
+
+    def retrofit2_version = "2.8.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-simplexml:$retrofit2_version"
+
+    def dagger_version = "2.27"
+    api "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    api "com.google.dagger:dagger-android:$dagger_version"
+    api "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    def stetho_version = "1.5.1"
+    debugImplementation "com.facebook.stetho:stetho:$stetho_version"
+    implementation "com.facebook.stetho:stetho-okhttp3:$stetho_version"
+    implementation "com.facebook.stetho:stetho-js-rhino:$stetho_version"
+
+    def rxlifecycle3_version = "3.1.0"
+    implementation "com.trello.rxlifecycle3:rxlifecycle:$rxlifecycle3_version"
+    implementation "com.trello.rxlifecycle3:rxlifecycle-android:$rxlifecycle3_version"
+    implementation "com.trello.rxlifecycle3:rxlifecycle-kotlin:$rxlifecycle3_version"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    testImplementation "org.khronos:opengl-api:gl1.1-android-2.1_r1"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
@@ -48,18 +96,6 @@ dependencies {
     implementation "javax.inject:javax.inject:1"
     implementation "javax.annotation:javax.annotation-api:1.3.2"
 
-    api 'com.google.dagger:dagger:2.27'
-    kapt 'com.google.dagger:dagger-compiler:2.27'
-
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.6.0")
-
-    implementation "com.squareup.okhttp3:okhttp:4.6.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.6.0"
-    implementation "com.squareup.retrofit2:retrofit:2.8.1"
-    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
-    implementation "com.squareup.retrofit2:converter-simplexml:2.8.1"
-
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
 
@@ -71,14 +107,8 @@ dependencies {
 
     implementation 'io.paperdb:paperdb:2.6'
 
-    debugImplementation 'com.facebook.stetho:stetho:1.5.1'
-    
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-alpha-2'
     implementation 'com.squareup.leakcanary:leaksentry:2.0-alpha-3'
-
-    implementation "com.trello.rxlifecycle3:rxlifecycle:3.1.0"
-    implementation "com.trello.rxlifecycle3:rxlifecycle-android:3.1.0"
-    implementation "com.trello.rxlifecycle3:rxlifecycle-kotlin:3.1.0"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
 
@@ -86,6 +116,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:0.9"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 
     testImplementation "junit:junit:4.13"
     testImplementation 'org.assertj:assertj-core:3.15.0'
@@ -98,12 +129,10 @@ dependencies {
     testImplementation 'androidx.test:runner:1.2.0'
     testImplementation "org.threeten:threetenbp:1.4.4"
     testImplementation "org.mockito:mockito-core:3.1.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 
-    testImplementation "org.khronos:opengl-api:gl1.1-android-2.1_r1"
 
-    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
